manifests/sample-app/virtualservice-delete.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: $app_name-external
  namespace: $namespace
